fix button wrap

--- a/src/styles/_testing-location-list-item.scss
+++ b/src/styles/_testing-location-list-item.scss
@@ -61,12 +61,12 @@
 }
 
 .MuiButtonBase-root.MuiButton-root.MuiButton-text.btn.primary-color.primary-outline.website-btn {
-  @media (min-width: $md) {
+  @media (min-width: 360px) {
     position: absolute;
     margin-left: 10px;
   }
 
-  @media (max-width: $md - 1) {
+  @media (max-width: 359px) {
     margin-top: 8px;
     display: block;
   }
